included footer around all pages of the website and fixed media queries where paralax was creating problems and font sizes too big for small screens

--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -1,3 +1,11 @@
 .profiles-page {
-    padding-top: 100px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+@media screen and (max-width:787px) {
+    .profiles-page {
+        width: 95%;
+
+    }
 }
